<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ToolbarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/scrollview_margen_superior"
        android:id="@+id/scrollView"
        android:fillViewport="false"
        android:layout_marginLeft="@dimen/scrollview_margen_izquierdo">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp">

            <TextView
                android:text="@string/general"
                android:id="@+id/textView_General"
                android:theme="@style/Textview_Configuracion_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"/>

            <View style="@style/Divisor"
                android:layout_marginBottom="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idioma"
                android:id="@+id/textViewId"
                android:theme="@style/Textview_Configuracion_opciones"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="4dp"
                android:clickable="false"
                android:onClick="onClickIdioma" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Small Text"
                android:id="@+id/textView4"
                android:theme="@style/Textview_Configuracion_subopciones"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"/>

            <View style="@style/Sub_Divisor"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:id="@+id/textViewMediumText"
                android:theme="@style/Textview_Configuracion_opciones"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:clickable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Textview_Configuracion_subopciones"
                android:text="Small Text"
                android:id="@+id/textView5"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:text="@string/datos_congregacion"
                android:id="@+id/textView_Datos"
                android:theme="@style/Textview_Configuracion_header"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold" />

            <View style="@style/Divisor"
                android:layout_marginBottom="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_congregacion"
                android:id="@+id/textViewNombreCongre"
                android:theme="@style/Textview_Configuracion_opciones"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:clickable="false"
                android:onClick="onClickNombreCongre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Textview_Configuracion_subopciones"
                android:text="Small Text"
                android:id="@+id/textView6"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"/>

            <View style="@style/Sub_Divisor"
                android:layout_marginBottom="10dp" />

            <TextView
                android:text="@string/dia_reunion"
                android:id="@+id/textViewDiaReunion"
                android:theme="@style/Textview_Configuracion_opciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:clickable="false"
                android:onClick="onClickDiaReu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Textview_Configuracion_subopciones"
                android:text="Small Text"
                android:id="@+id/textView7"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:text="@string/copia_seguridad"
                android:id="@+id/textView_Copia_Seguridad"
                android:theme="@style/Textview_Configuracion_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"/>

            <View style="@style/Divisor"
                android:layout_marginBottom="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuenta_google"
                android:id="@+id/textViewCuentaGoogle"
                android:theme="@style/Textview_Configuracion_opciones"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:clickable="false"
                android:onClick="onClickCuentaGoogle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Textview_Configuracion_subopciones"
                android:text="Small Text"
                android:id="@+id/textView8"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"/>

            <View style="@style/Sub_Divisor"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar_copia"
                android:id="@+id/textViewGuardarCopia"
                android:theme="@style/Textview_Configuracion_opciones"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:clickable="false"
                android:onClick="onClickBackupEn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Textview_Configuracion_subopciones"
                android:text="Small Text"
                android:id="@+id/textView9"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:text="@string/informacion_legal"
                android:id="@+id/textView_Informacion_Legal"
                android:theme="@style/Textview_Configuracion_header"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold" />

            <View style="@style/Divisor"
                android:layout_marginBottom="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/licencia"
                android:id="@+id/textViewLicenciaFuente"
                android:theme="@style/Textview_Configuracion_opciones"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:clickable="false"
                android:onClick="onClickLicencia" />

            <View style="@style/Sub_Divisor"
                android:layout_marginBottom="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condiciones"
                android:id="@+id/textViewCondiciones"
                android:theme="@style/Textview_Configuracion_opciones"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:clickable="false"
                android:onClick="onClickCondiciones" />

            <View style="@style/Sub_Divisor"
                android:layout_marginBottom="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrato"
                android:id="@+id/textViewContratoLicencia"
                android:theme="@style/Textview_Configuracion_opciones"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:clickable="false"
                android:onClick="onClickContrato" />

            <View style="@style/Sub_Divisor"
                android:layout_marginBottom="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/politica"
                android:id="@+id/textViewPoliticaPrivacidad"
                android:theme="@style/Textview_Configuracion_opciones"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="10dp"
                android:clickable="false"
                android:onClick="onClickPolitica" />

            <TextView
                android:text="@string/aplicacion"
                android:id="@+id/textView_Aplicacion"
                android:theme="@style/Textview_Configuracion_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold" />

            <View style="@style/Divisor"
                android:layout_marginBottom="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:id="@+id/textView_Version"
                android:theme="@style/Textview_Configuracion_opciones"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp" />

            <View style="@style/Sub_Divisor"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                android:id="@+id/textView_Copyright"
                android:theme="@style/Textview_Configuracion_opciones"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp"/>

            <View style="@style/Sub_Divisor"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>