<?xml version="1.0" encoding="utf-8"?>

<util.CheckableRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgEstudiante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_account_circle_black_48dp"
        android:contentDescription="@string/imageview_estudiante"
        android:focusable="false"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_toEndOf="@+id/imgEstudiante"
        android:layout_toStartOf="@+id/checkbEstudiante">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nombre_estudiante"
            android:id="@+id/viewNombre"
            android:focusable="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/apellido"
            android:id="@+id/viewApellido"
            android:layout_marginTop="10dp"
            android:focusable="false"/>

    </LinearLayout>
    <!-- No se permite que le usuario de click sobre el checkBox, la clase CheckableRelativeLayout
   se encargara esta asignacion para cada contacto de manera independiente-->

    <CheckBox
        android:id="@+id/checkbEstudiante"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/imgEstudiante"
        android:clickable="false"
        android:focusable="false"/>

</util.CheckableRelativeLayout>